# TaskBlock

./: CMakeLists.txt  README.md  main.cpp
demo/: DemoTaskA.cpp  DemoTaskA.h  DemoTaskB.cpp  DemoTaskB.h
include/TaskBlock/: TaskBase.hpp  TaskBlock.hpp
src/: TaskBlock.cpp
